card gap issue fixed

--- a/assets/scss/components/_input.scss
+++ b/assets/scss/components/_input.scss
@@ -78,6 +78,7 @@
     font-weight: 700;
     color: $color_natural_description;
     height: 38px;
+    font-size: 14px;
 
     i{
         margin-right: 8px;
